<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">
<item
    android:id="@+id/feature"
    android:icon="@drawable/btn_feature"
    app:showAsAction="always"
    android:title="">
    <menu>
        <item
            android:id="@+id/normal_type"
            android:iconTint="@color/black"
            android:title="@string/normal_type"
            app:showAsAction="never" />
        <item
            android:id="@+id/satellite_type"
            android:title="@string/satellite_type"
            android:iconTint="@color/black"
            app:showAsAction="never" />
        <item
            android:id="@+id/terrain_type"
            android:title="@string/terrain_type"
            android:iconTint="@color/black"
            app:showAsAction="never" />
        <item
            android:id="@+id/hybrid_type"
            android:title="@string/hybrid_type"
            android:iconTint="@color/black"
            app:showAsAction="never" />
    </menu>
</item>

</menu>