<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UploadActivity">

    <FrameLayout
        android:id="@+id/frame_image"
        android:layout_width="353dp"
        android:layout_height="372dp"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:gravity="center_horizontal|bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141">

        <ImageView
            android:id="@+id/upload_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#F4F4F4"
            app:srcCompat="@drawable/baseline_file_download_24" />

        <TextView
            android:id="@+id/imageinfo"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:text="@string/imageinfo"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#A69090" />
    </FrameLayout>

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="356dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_description"
        android:drawablePadding="16dp"
        android:gravity="start|top"
        android:hint="@string/upload_image_description"
        android:imeOptions="actionNext"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLines="5"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_camera"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/green1"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/bg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_add_gallery"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_gallery"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/green1"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/gallery"
        android:textColor="@color/bg"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upload_button"
        android:layout_width="364dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/green2"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/Upload"
        android:textColor="@color/bg"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

    <ProgressBar
        android:id="@+id/upload_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>